--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"dependencies": {
+		"@netlify/plugin-nextjs": "^5.2.2",
 		"framer-motion": "^8.5.5",
 		"next": "^14.2.3",
 		"next-i18next": "^15.3.0",
@@ -23,6 +24,7 @@
 		"react-intersection-observer": "^9.10.2",
 		"react-typed": "^2.0.12",
 		"react-typical": "^0.1.3",
+		"sharp": "^0.33.3",
 		"swiper": "^11.1.1",
 		"swr": "^2.2.4",
 		"typed.js": "^2.1.0",
