--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-next": "^13.5.6",
 		"eslint-config-prettier": "^8.10.0",
+		"gh-pages": "^6.1.1",
 		"postcss": "^8.4.32",
 		"prettier": "^2.8.8",
 		"tailwindcss": "^3.4.0"
