--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-icons": "^4.12.0",
 		"react-image-gallery": "^1.3.0",
 		"react-intersection-observer": "^9.10.2",
+		"react-katex": "^3.0.1",
 		"react-typed": "^2.0.12",
 		"react-typical": "^0.1.3",
 		"sharp": "^0.33.3",
