--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
 		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"dependencies": {
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@headlessui/react": "^2.0.3",
+		"@heroicons/react": "^2.1.3",
 		"@netlify/plugin-nextjs": "^5.2.2",
 		"framer-motion": "^8.5.5",
 		"katex": "^0.16.10",
