--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"dependencies": {
-
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
@@ -19,12 +18,12 @@
 		"@netlify/plugin-nextjs": "^5.2.2",
 		"framer-motion": "^8.5.5",
 		"katex": "^0.16.10",
-
 		"next": "^14.2.3",
 		"next-i18next": "^15.3.0",
 		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-dropdown": "^1.11.0",
 		"react-error-boundary": "^3.1.4",
 		"react-i18next": "^14.1.1",
 		"react-icons": "^4.12.0",
