--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"next-i18next": "^15.3.0",
 		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react-dom": "^18.3.1",
 		"react-dropdown": "^1.11.0",
 		"react-error-boundary": "^3.1.4",
 		"react-i18next": "^14.1.1",
@@ -30,6 +30,7 @@
 		"react-image-gallery": "^1.3.0",
 		"react-intersection-observer": "^9.10.2",
 		"react-katex": "^3.0.1",
+		"react-mathjax2": "^0.0.2",
 		"react-typed": "^2.0.12",
 		"react-typical": "^0.1.3",
 		"sharp": "^0.33.3",
